--- a/practice/pr04.ipynb
+++ b/practice/pr04.ipynb
@@ -500,7 +500,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
