--- a/practice/pr07.ipynb
+++ b/practice/pr07.ipynb
@@ -32,12 +32,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def example_func(x: Iterable[float | complex]) -> float:\n",
-    "    return np.power(x, 2).sum()"
+    "def example_func(x: Iterable):\n",
+    "    return np.multiply(x, x).sum()"
    ]
   },
   {
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -212,94 +212,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class ClassicalInterval:\n",
-    "    def __init__(self, a: int | float, b: int | float = None):\n",
-    "        self.a = a\n",
-    "        if b is not None:\n",
-    "            if b < a:\n",
-    "                raise ValueError(\"Left boundary should be less than right boundary\")\n",
-    "            self.b = b\n",
-    "        else:\n",
-    "            self.b = a\n",
-    "    \n",
-    "    def __repr__(self):\n",
-    "        return f\"[{self.a}; {self.b}]\"\n",
-    "\n",
-    "    def __pos__(self):\n",
-    "        return self\n",
-    "\n",
-    "    def __add__(self, o):\n",
-    "        if not isinstance(o, ClassicalInterval):\n",
-    "            o = ClassicalInterval(o)\n",
-    "        return ClassicalInterval(self.a + o.a, self.b + o.b)\n",
-    "\n",
-    "    def __radd__(self, o):\n",
-    "        return self + o\n",
-    "\n",
-    "    def __iadd__(self, o):\n",
-    "        return self + o\n",
-    "    \n",
-    "    def __neg__(self):\n",
-    "        return ClassicalInterval(-self.b, -self.a)\n",
-    "\n",
-    "    def __sub__(self, o):\n",
-    "        return self + (-o)\n",
-    "\n",
-    "    def __rsub__(self, o):\n",
-    "        return (-self) - (-o)\n",
-    "    \n",
-    "    def __isub__(self, o):\n",
-    "        return self - o\n",
-    "\n",
-    "    def __mul__(self, o):\n",
-    "        if not isinstance(o, ClassicalInterval):\n",
-    "            o = ClassicalInterval(o)\n",
-    "        r = [self.a * o.a, self.a * o.b, self.b * o.a, self.b * o.b]\n",
-    "        return ClassicalInterval(min(r), max(r))\n",
-    "    \n",
-    "    def __rmul__(self, o):\n",
-    "        return self * o\n",
-    "    \n",
-    "    def __imul__(self, o):\n",
-    "        return self * o\n",
-    "\n",
-    "    def _inverse(interval):\n",
-    "        if interval.a <= 0 <= interval.b:\n",
-    "            raise ZeroDivisionError(\"Divider cannot contain zero.\")\n",
-    "        r = [1.0 / interval.a, 1.0 / interval.b]\n",
-    "        return ClassicalInterval(min(r), max(r))\n",
-    "\n",
-    "    def __truediv__(self, o):\n",
-    "        if not isinstance(o, ClassicalInterval):\n",
-    "            if o == 0:\n",
-    "                raise ZeroDivisionError(\"Divider cannot be zero.\")\n",
-    "            o = ClassicalInterval(o)\n",
-    "        return self * ClassicalInterval._inverse(o)\n",
-    "    \n",
-    "    def __rtruediv__(self, o):\n",
-    "        return o * ClassicalInterval._inverse(self)\n",
-    "    \n",
-    "    def __itruediv__(self, o):\n",
-    "        return self / o\n",
-    "    \n",
-    "    def __pow__(self, o):\n",
-    "        if not isinstance(o, ClassicalInterval):\n",
-    "            o = ClassicalInterval(o)\n",
-    "        r = [self.a ** o.a, self.a ** o.b, self.b ** o.a, self.b ** o.b]\n",
-    "        return ClassicalInterval(min(r), max(r))\n",
-    "    \n",
-    "    def __rpow__(self, o):\n",
-    "        return ClassicalInterval(o) ** self\n",
-    "    \n",
-    "    def abs(self):\n",
-    "        if self.a < 0 and self.b > 0:\n",
-    "            return ClassicalInterval(0, max(-self.a, self.b))\n",
-    "        r = [abs(self.a), abs(self.b)]\n",
-    "        return ClassicalInterval(min(r), max(r))"
+    "from utils import IntervalArithmetics"
    ]
   },
   {
@@ -311,24 +228,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[-0.07995999999999981; 0.08003999999998967]"
+       "np.float64(0.07999999999999474)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "x_left, x_right = X * (1 - ERROR_PERCENT / 100), X * (1 + ERROR_PERCENT / 100)\n",
-    "classical_error_intervals = [ClassicalInterval(left, right) for left, right in zip(x_left, x_right)]\n",
-    "example_func(classical_error_intervals) - example_func(X)"
+    "variable_domains_interval = [IntervalArithmetics(left, right) for left, right in zip(x_left, x_right)]\n",
+    "example_func(variable_domains_interval).radius()"
    ]
   },
   {
@@ -336,40 +253,114 @@
    "metadata": {},
    "source": [
     "В этом примере она оказалась весьма похожей на то, что мы получили линеаризацией, однако это далеко не всегда будет так. Например, в этой функции разница уже заметнее:\n",
-    "$$f(x_1, x_2, \\dotsc, x_n) = \\sum_{i=1}^n \\frac{\\frac{1}{x_i^5} + \\frac{3^{x_i}}{10} + 1}{x-1}$$"
+    "$$f(x_1, x_2, \\dotsc, x_n) = \\sum_{i=1}^n \\frac{\\frac{1}{x_i^5} + \\frac{3^{x_i}}{10} + 1}{-x_i}$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def example_func_2(x: Iterable[float | complex]) -> float:\n",
-    "    return np.sum((1.0 / np.power(x, 5) + np.power(3, x) / 10 + 1) / x - 1)"
+    "def example_func_2(x: Iterable) -> float:\n",
+    "    return np.sum((1.0 / np.power(x, 5) + np.power(3, x) / 10 + 1) / np.negative(x))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Classical intervals arithmetic got [-0.02029152619045016; 0.020358588917470666]\n",
-      "Linearization with complex step derivatives estimation got -0.000549989401987016\n",
+      "Intervals arithmetics got                                  0.020325057553963077\n",
+      "Linearization with complex step derivatives estimation got 0.000549989401987016\n",
       "Difference ~37 times!\n"
      ]
     }
    ],
    "source": [
-    "error_intervals = example_func_2(classical_error_intervals) - example_func_2(X)\n",
-    "print(f\"Classical intervals arithmetic got {error_intervals}\")\n",
+    "error_intervals = example_func_2(variable_domains_interval).radius()\n",
     "error_linearization = linearization_error_estimate(X, deltas, example_func_2, derivatives_complex_step, 1e-100)\n",
+    "print(f\"Intervals arithmetics got                                  {error_intervals}\")\n",
     "print(f\"Linearization with complex step derivatives estimation got {error_linearization}\")\n",
-    "print(f\"Difference ~{math.ceil(abs(error_intervals.a / error_linearization))} times!\")"
+    "print(f\"Difference ~{math.ceil(error_intervals / error_linearization)} times!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Для афинной арифметики перегрузим некоторые основные арифметические операции, включая бинарные ($+$, $-$, $\\cdot$, $\\div$), бинарные с присвоением, все эти операции в комбинации с обыкновенными числами с обеих сторон, унарные ($+$, $-$), а так же представление при печати. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from utils import AffineArithmetics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Воспользуемся этим классом, чтобы найти наследственную ошибку. Поскольку в афинной арифметике значительно сложнее реализовать возведение в степень и потенцирование, функцию придётся упростить:\n",
+    "$$f(x_1, x_2, \\dotsc, x_n) = \\sum_{i=1}^n \\frac{\\frac{1}{x_i^2} + \\frac{\\pi {x_i}}{10} + 1}{-x_i}$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def example_func_3(x: Iterable):\n",
+    "    return np.sum((1 / np.multiply(x, x) + np.multiply(np.pi, x) / 10 + 1) / np.negative(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "variable_domains_affine = list(map(AffineArithmetics, variable_domains_interval))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Classical intervals arithmetics got                        0.015033209090402622\n",
+      "Affine arithmetics got                                     0.00875193657477359\n",
+      "Linearization with complex step derivatives estimation got 0.008750000000000004\n"
+     ]
+    }
+   ],
+   "source": [
+    "error_intervals = example_func_3(variable_domains_interval).radius()\n",
+    "error_affine = example_func_3(variable_domains_affine).radius()\n",
+    "error_linearization = linearization_error_estimate(X, deltas, example_func_3, derivatives_complex_step, 1e-100)\n",
+    "print(f\"Classical intervals arithmetics got                        {error_intervals}\")\n",
+    "print(f\"Affine arithmetics got                                     {error_affine}\")\n",
+    "print(f\"Linearization with complex step derivatives estimation got {error_linearization}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Видно, что в этом случае результат получился почти такой же, как и при линеаризации."
    ]
   }
  ],
