--- a/practice/pr08.ipynb
+++ b/practice/pr08.ipynb
@@ -11,7 +11,7 @@
     "import itertools\n",
     "import math\n",
     "from tqdm import tqdm\n",
-    "from utils import all_keys, type_name, isnumber, isiterable, scale_dict"
+    "from utils import all_keys, type_name, isnumber, isiterable, scale_dict, raise_operand_exception"
    ]
   },
   {
@@ -35,9 +35,20 @@
     "        self.original_name = None\n",
     "\n",
     "    def value(self) -> float | int:\n",
+    "        \"\"\"\n",
+    "        Get value of the variable.\n",
+    "\n",
+    "        :returns: variable's current value\n",
+    "        \"\"\"\n",
     "        return self.real\n",
-    "    def get_gradient(self) -> list[float]:\n",
-    "        return list(self.dual.values())\n",
+    "\n",
+    "    def get_gradient(self) -> dict:\n",
+    "        \"\"\"\n",
+    "        Get the first derivatives of the variable with respect to all its child variables.\n",
+    "\n",
+    "        :returns: dict which maps child variable's symbol to the derivative of the function w.r.t. this variable\n",
+    "        \"\"\"\n",
+    "        return self.dual\n",
     "\n",
     "    def print_gradient(self, precision: int = 6) -> None:\n",
     "        print(', '.join(['d/d{} = {:.{}f}'.format(key, d, precision) for key, d in sorted(list(self.dual.items()), key=lambda x: x[0] if len(x[0].split('_')) == 1 else int(x[0].split('_')[-1]))]))\n",
@@ -71,10 +82,11 @@
     "        :param values: values of the variables\n",
     "        :param length: length of the vector (is required if `values = None`, otherwise ignored)\n",
     "        :param ignore_existent: do not raise an exception if a variable with name `symbol` with index in range \n",
-    "        [1; len(values)] already exists \n",
+    "        `[1; len(values)]` already exists \n",
     "        :returns: FwdAAD  variables list\n",
-    "        :raises ValueError: if a variable with name `symbol` with index in range [1; len(values)] already exists and\n",
+    "        :raises ValueError: if a variable with name `symbol` with index in range `[1; len(values)]` already exists and\n",
     "        `ignore_existent` is False\n",
+    "        :raises ValueError: if neither `values` nor `length` arguments have been specified\n",
     "        \"\"\"\n",
     "        if values is not None:\n",
     "            return [FwdAAD.get_variable(symbol + '_' + str(idx + 1), x, ignore_existent) for idx, x in enumerate(values)]\n",
@@ -84,12 +96,28 @@
     "            raise ValueError(\"Please provide values or specify length of the vector.\")\n",
     "\n",
     "    def set_value(self, value: int | float) -> None:\n",
+    "        \"\"\"\n",
+    "        Change value of the variable to `value`. Note that this deletes the\n",
+    "        computed gradient for the variable.\n",
+    "\n",
+    "        :param value: value of the variables\n",
+    "        :raises ValueError: if `value` is not a number\n",
+    "        \"\"\"\n",
     "        if not isnumber(value):\n",
     "            raise ValueError(f\"Expected a number, got '{type_name(value)}'\")\n",
     "        self.real = value\n",
     "        self.dual = {self.original_name: 1}\n",
     "\n",
     "    def set_name(self, name: str) -> None:\n",
+    "        \"\"\"\n",
+    "        Change the symbol of the variable to `name`. Note that this deletes the\n",
+    "        computed gradient for the variable.\n",
+    "\n",
+    "        :param name: new name of the variable\n",
+    "        :raises ValueError: if `name` is not a str\n",
+    "        \"\"\"\n",
+    "        if not isinstance(name, str):\n",
+    "            raise ValueError(f\"Expected a 'str', got '{type_name(value)}'\")\n",
     "        derivative = self.dual[self.original_name]\n",
     "        del self.dual[self.original_name] \n",
     "        FwdAAD.all_names.remove(self.original_name)\n",
@@ -109,10 +137,6 @@
     "                raise ValueError(f\"Expected '{FwdAAD.__name__}', got '{type_name(var)}'\")\n",
     "            var.set_value(val) \n",
     "\n",
-    "    def _raise_operand_exception(x, y, op: str):\n",
-    "        raise ValueError(f\"unsupported operand type(s) for {op}: '{type_name(x)}' and '{type_name(y)}'\")\n",
-    "\n",
-    "\n",
     "    def __repr__(self):\n",
     "        return str(self.real)\n",
     "\n",
@@ -124,7 +148,7 @@
     "        elif isnumber(other):\n",
     "            return FwdAAD(self.real + other, self.dual)\n",
     "        else:\n",
-    "            FwdAAD._raise_operand_exception(self, other, '+')\n",
+    "            raise_operand_exception(self, other, '+')\n",
     "\n",
     "    def __pos__(self):\n",
     "        return self\n",
@@ -133,8 +157,8 @@
     "        return self * (-1)\n",
     "\n",
     "    def __sub__(self, other):\n",
-    "        if not isinstance(other, FwdAAD) or isnumber(other):\n",
-    "            FwdAAD._raise_operand_exception(self, other, '-')\n",
+    "        if not (isinstance(other, FwdAAD) or isnumber(other)):\n",
+    "            raise_operand_exception(self, other, '-')\n",
     "        return self + (-other)\n",
     "\n",
     "    def __mul__(self, other):\n",
@@ -145,7 +169,7 @@
     "        elif isnumber(other):\n",
     "            return FwdAAD(self.real * other, scale_dict(self.dual, other))\n",
     "        else:\n",
-    "            FwdAAD._raise_operand_exception(self, other, '*')\n",
+    "            raise_operand_exception(self, other, '*')\n",
     "    \n",
     "    def _inverse(self):\n",
     "        real2 = self.real * self.real\n",
@@ -158,7 +182,7 @@
     "        elif isnumber(other):\n",
     "            return self * (1 / other)\n",
     "        else:\n",
-    "            FwdAAD._raise_operand_exception(self, other, '/')\n",
+    "            raise_operand_exception(self, other, '/')\n",
     "    \n",
     "    def __pow__(self, other):\n",
     "        if isinstance(other, FwdAAD):\n",
@@ -172,7 +196,7 @@
     "            term = other * pow(self.real, other - 1)  # optimization\n",
     "            dual = scale_dict(self.dual, term)\n",
     "        else:\n",
-    "            FwdAAD._raise_operand_exception(self, other, '** or pow()')\n",
+    "            raise_operand_exception(self, other, '** or pow()')\n",
     "        return FwdAAD(real, dual)\n",
     "\n",
     "    def __rpow__(self, other):\n",
@@ -182,7 +206,7 @@
     "            dual = {key: term * d for key, d in self.dual.items()}\n",
     "            return FwdAAD(real, dual)\n",
     "        else:\n",
-    "            FwdAAD._raise_operand_exception(self, other, '** or pow()')\n",
+    "            raise_operand_exception(self, other, '** or pow()')\n",
     "\n",
     "    __radd__ = __add__\n",
     "    def __rsub__(self, other):\n",
@@ -214,22 +238,22 @@
     }
    ],
    "source": [
-    "arguments: FwdAAD = FwdAAD.get_variable('x', 2, ignore_existent=True)\n",
+    "x: FwdAAD = FwdAAD.get_variable('x', 2, ignore_existent=True)\n",
     "y: FwdAAD = FwdAAD.get_variable('y', np.pi, ignore_existent=True)\n",
     "\n",
     "def func(x, y):\n",
     "    return x ** 3 - 2 * x ** 2 * y ** 2 + y ** 3\n",
     "\n",
-    "f: FwdAAD = func(arguments, y)\n",
+    "f: FwdAAD = func(x, y)\n",
     "f.print_gradient(precision=10)\n",
     "\n",
     "# if we want to change values and names:\n",
-    "arguments.set_value(1)\n",
+    "x.set_value(1)\n",
     "y.set_value(1)\n",
-    "arguments.set_name('y_0')\n",
+    "x.set_name('y_0')\n",
     "y.set_name('y_1')\n",
     "\n",
-    "f: FwdAAD = func(arguments, y)\n",
+    "f: FwdAAD = func(x, y)\n",
     "f.print_gradient(precision=0)"
    ]
   },
@@ -268,8 +292,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1771561/1771561 [02:33<00:00, 11504.22it/s]\n",
-      "100%|██████████| 1771561/1771561 [04:17<00:00, 6882.27it/s]\n"
+      "100%|██████████| 1771561/1771561 [02:37<00:00, 11268.21it/s]\n",
+      "100%|██████████| 1771561/1771561 [04:11<00:00, 7036.51it/s]\n"
      ]
     }
    ],
